@@ -1,6 +1,6 @@
 % File src/library/base/man/readChar.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2007 R Core Development Team
+% Copyright 1995-2009 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{readChar}
@@ -14,8 +14,8 @@
 \usage{
 readChar(con, nchars, useBytes = FALSE)
 
-writeChar(object, con,
-          nchars = nchar(object, type="chars"), eos = "")
+writeChar(object, con, nchars = nchar(object, type="chars"),
+          eos = "", useBytes = FALSE)
 }
 \arguments{
   \item{con}{A connection object, or a character string naming a file,
@@ -23,8 +23,11 @@ writeChar(object, con,
   \item{nchars}{integer, giving the lengths in characters of (unterminated)
     character strings to be read or written.  Must be >= 0 and not
     missing.}
-  \item{useBytes}{logical: should \code{nchars} be regarded as a number
-    of bytes not characters in a multi-byte locale?}
+  \item{useBytes}{logical: For \code{readChar}, should \code{nchars} be
+    regarded as a number of bytes not characters in a multi-byte
+    locale?  For \code{writeChar}, if  true character strings with
+    marked encodings are written byte-by-byte: if false they are
+    converted to the current encoding.} 
   \item{object}{A character vector to be written to the connection, at
     least as long as \code{nchars}.}
   \item{eos}{\sQuote{end of string}: character string .  The terminator
