@@ -895,11 +895,11 @@ attribute_hidden FUNTAB R_FunTab[] = {
     {"stdout", do_stdout, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"stderr", do_stderr, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"readLines", do_readLines, 0, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
-    {"writeLines", do_writelines, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
+    {"writeLines", do_writelines, 0, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"readBin", do_readbin, 0, 11, 6, {PP_FUNCALL, PREC_FN, 0}},
-    {"writeBin", do_writebin, 0, 211, 4, {PP_FUNCALL, PREC_FN, 0}},
+    {"writeBin", do_writebin, 0, 211, 5, {PP_FUNCALL, PREC_FN, 0}},
     {"readChar", do_readchar, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
-    {"writeChar", do_writechar, 0, 211, 4, {PP_FUNCALL, PREC_FN, 0}},
+    {"writeChar", do_writechar, 0, 211, 5, {PP_FUNCALL, PREC_FN, 0}},
     {"open", do_open, 0, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"isOpen", do_isopen, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"isIncomplete", do_isincomplete, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
